// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render an H1 at fontSize90 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 2rem;
  line-height: 2.75rem;
  margin-bottom: 1.5rem;
  font-weight: 700;
  display: block;
}

<div
  className="emotion-1"
>
  <h1
    className="emotion-0"
    color="colorText"
    data-paste-element="TEXT"
    display="block"
    fontSize="fontSize90"
    fontWeight="fontWeightBold"
  >
    This is an H1
  </h1>
</div>
`;

exports[`Heading should render an H2 at fontSize70 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 1.5rem;
  line-height: 2rem;
  margin-bottom: 1.25rem;
  font-weight: 700;
  display: block;
}

<div
  className="emotion-1"
>
  <h2
    className="emotion-0"
    color="colorText"
    data-paste-element="TEXT"
    display="block"
    fontSize="fontSize70"
    fontWeight="fontWeightBold"
  >
    This is an H2
  </h2>
</div>
`;

exports[`Heading should render an H3 at fontSize60 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 1.25rem;
  line-height: 1.75rem;
  margin-bottom: 1rem;
  font-weight: 700;
  display: block;
}

<div
  className="emotion-1"
>
  <h3
    className="emotion-0"
    color="colorText"
    data-paste-element="TEXT"
    display="block"
    fontSize="fontSize60"
    fontWeight="fontWeightBold"
  >
    This is an H3
  </h3>
</div>
`;

exports[`Heading should render an H4 at fontSize40 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 1rem;
  line-height: 1.5rem;
  margin-bottom: 0.75rem;
  font-weight: 700;
  display: block;
}

<div
  className="emotion-1"
>
  <h4
    className="emotion-0"
    color="colorText"
    data-paste-element="TEXT"
    display="block"
    fontSize="fontSize40"
    fontWeight="fontWeightBold"
  >
    This is an H4
  </h4>
</div>
`;

exports[`Heading should render an H5 at fontSize30 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-bottom: 0.5rem;
  font-weight: 700;
  display: block;
}

<div
  className="emotion-1"
>
  <h5
    className="emotion-0"
    color="colorText"
    data-paste-element="TEXT"
    display="block"
    fontSize="fontSize30"
    fontWeight="fontWeightBold"
  >
    This is an H5
  </h5>
</div>
`;

exports[`Heading should render an H6 at fontSize20 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.75rem;
  line-height: 1.25rem;
  margin-bottom: 0.5rem;
  font-weight: 700;
  display: block;
}

<div
  className="emotion-1"
>
  <h6
    className="emotion-0"
    color="colorText"
    data-paste-element="TEXT"
    display="block"
    fontSize="fontSize20"
    fontWeight="fontWeightBold"
  >
    This is an H6
  </h6>
</div>
`;

exports[`Heading should render an italic H2 at fontSize50 1`] = `
.emotion-1 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 1.5rem;
  line-height: 2rem;
  margin-bottom: 1.25rem;
  font-weight: 700;
  display: block;
}

<div
  className="emotion-1"
>
  <h2
    className="emotion-0"
    color="colorText"
    data-paste-element="TEXT"
    display="block"
    fontSize="fontSize70"
    fontWeight="fontWeightBold"
  >
    <i>
      This is an italic H2
    </i>
  </h2>
</div>
`;

exports[`Heading should render with no margin 1`] = `
.emotion-6 {
  color: rgb(40,42,43);
  font-size: 0.875rem;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.25rem;
  font-weight: 400;
  font-variant-numeric: tabular-nums;
}

.emotion-0 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 2rem;
  line-height: 2.75rem;
  margin-bottom: 0;
  font-weight: 700;
  display: block;
}

.emotion-1 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 1.5rem;
  line-height: 2rem;
  margin-bottom: 0;
  font-weight: 700;
  display: block;
}

.emotion-2 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 1.25rem;
  line-height: 1.75rem;
  margin-bottom: 0;
  font-weight: 700;
  display: block;
}

.emotion-3 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 1rem;
  line-height: 1.5rem;
  margin-bottom: 0;
  font-weight: 700;
  display: block;
}

.emotion-4 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-bottom: 0;
  font-weight: 700;
  display: block;
}

.emotion-5 {
  margin: 0;
  padding: 0;
  color: rgb(40,42,43);
  font-size: 0.75rem;
  line-height: 1.25rem;
  margin-bottom: 0;
  font-weight: 700;
  display: block;
}

<div
  className="emotion-6"
>
  <h2
    className="emotion-0"
    color="colorText"
    data-paste-element="TEXT"
    display="block"
    fontSize="fontSize90"
    fontWeight="fontWeightBold"
  >
    no margin heading
  </h2>
  <h2
    className="emotion-1"
    color="colorText"
    data-paste-element="TEXT"
    display="block"
    fontSize="fontSize70"
    fontWeight="fontWeightBold"
  >
    no margin heading
  </h2>
  <h2
    className="emotion-2"
    color="colorText"
    data-paste-element="TEXT"
    display="block"
    fontSize="fontSize60"
    fontWeight="fontWeightBold"
  >
    no margin heading
  </h2>
  <h2
    className="emotion-3"
    color="colorText"
    data-paste-element="TEXT"
    display="block"
    fontSize="fontSize40"
    fontWeight="fontWeightBold"
  >
    no margin heading
  </h2>
  <h2
    className="emotion-4"
    color="colorText"
    data-paste-element="TEXT"
    display="block"
    fontSize="fontSize30"
    fontWeight="fontWeightBold"
  >
    no margin heading
  </h2>
  <h2
    className="emotion-5"
    color="colorText"
    data-paste-element="TEXT"
    display="block"
    fontSize="fontSize20"
    fontWeight="fontWeightBold"
  >
    no margin heading
  </h2>
</div>
`;
